python_src/tests/negative/oob_index.yvr
arr: ARRAY{INT}
i, result: INT
arr = ARRAY[4]{0}
arr[0] = 20
arr[1] = 30
arr[2] = 40
arr[3] = 50
i = 10
result = arr[i]